# MODUL-PEMBELAJARAN

./: LICENSE  README.md  test.txt
Programming/CMAKE_JSON/: MODUL_CMAKE.md
Programming/ESP/: ESP_Module.md  README.md
Programming/ESP/example/ArduinoJSON/src/: main.cpp
Programming/ESP/example/EEPROM/src/: main.cpp
Programming/ESP/example/ESP-NOW/: platformio.ini
Programming/ESP/example/ESP-NOW/src/: main.cpp
Programming/ESP/example/SERIAL/src/: main.cpp
Programming/ESP/example/SPIFFS/src/: main.cpp
Programming/ESP/penugasan/: README.md  TEMPLATE_TUGAS_2.rar
Programming/ESP32/: README.md
Programming/ESP32/example/ArduinoJSON/: platformio.ini
Programming/ESP32/example/ArduinoJSON/data/: test.json
Programming/ESP32/example/EEPROM/src/: main.cpp
Programming/JSON/: README.md
Programming/PENUGASAN/TASK-1 Basic CPP/: README.md
Programming/PENUGASAN/TASK-3 Sapa Menyapa ESP-NOW/: README.md
Programming/PENUGASAN/TASK-3 Sapa Menyapa ESP-NOW/Kunci TASK-3 Sapa Menyapa/: README.md
Programming/PENUGASAN/TASK-3 Sapa Menyapa ESP-NOW/Kunci TASK-3 Sapa Menyapa/src/: main.cpp  main.h  utility.cpp
Programming/PENUGASAN/TASK-3 Sapa Menyapa ESP-NOW/TEMPLATE TASK-3 Sapa Menyapa/src/: main.cpp  main.h  utility.cpp
Programming/PENUGASAN/TASK-4 Cross PLatform FIle Transfer ESP-NOW/: README.md
Programming/PENUGASAN/TASK-FINAL/: README.md
Programming/PENUGASAN/TASK-FINAL/Keyboard-input_remote/: CMakeLists.txt  README.md  comm.cpp  comm.hpp  main.cpp
Programming/PENUGASAN/TASK-FINAL/Receiver/src/: main.cpp  main.h  utility.cpp
Programming/PENUGASAN/TASK-FINAL/Transmitter/src/: main.cpp  utility.cpp
Programming/PENUGASAN/TASK-FINAL/Webots/controllers/controller-fp/: CMakeLists.txt  controller-fp.cpp
Programming/PENUGASAN/TASK-FINAL/Webots/controllers/controller-fp/pose/: pose-geser-kiri.json  pose-jalan-maju.json
Programming/PENUGASAN/TASK-FINAL/Webots/controllers/pose_controller/: pose_controller.py
Programming/PENUGASAN/TASK-FINAL/Webots/poses/: pose-belok-kanan.json  pose-belok-kiri.json  pose-berdiri.json  pose-geser-kanan.json  pose-jalan-maju.json  pose-jalan-mundur.json  pose-jongkok.json
Programming/PENUGASAN/TASK-FINAL/Webots/protos/: ROBOT-FP.proto
Programming/PENUGASAN/TASK-FINAL/Webots/worlds/: .fp.wbproj  fp.wbt
Programming/PENUGASAN/TASK-FINAL/assets/: pose.ai
Programming/SIMULATION/: README.md
Programming/SIMULATION/EXAMPLE/4_wheeled_robot_avoider/testing-magang/controllers/epuck_go_forward/: CMakeLists.txt  epuck_go_forward.cpp
Programming/SIMULATION/EXAMPLE/4_wheeled_robot_avoider/testing-magang/protos/: FourWheelsRobot.proto
Programming/SIMULATION/EXAMPLE/4_wheeled_robot_avoider/testing-magang/worlds/: .test-magang.wbproj  .testing-magang2.wbproj  test-magang.wbt  testing-magang2.wbt
Programming/SIMULATION/EXAMPLE/WALL-AVOIDER-BOT/: README.md
Programming/SIMULATION/EXAMPLE/WALL-AVOIDER-BOT/controllers/my_controller/: my_controller.py
Programming/SIMULATION/EXAMPLE/WALL-AVOIDER-BOT/worlds/: .moro.wbproj  moro.wbt
Programming/SIMULATION/EXAMPLE/arm_n_car/models/: 1_Base.stl  2_UpperBase.stl  3_LeftBeam.stl  4_RightBeam.stl  5_GripperWristBeam.stl  6_RightBeamGripper.stl  7_RightGripper.stl  8_LeftGripper.stl  9_GripperBase.stl  XL320.stl
Programming/SIMULATION/EXAMPLE/arm_n_car/protos/: ARM_HENDRO.proto  SIMPLE_CAR.proto  XL320.proto
Programming/SIMULATION/EXAMPLE/arm_n_car/worlds/: .arm_hendro_world.wbproj  .car.wbproj  arm_hendro_world.wbt  car.wbt
(+6 files in other folders)
